--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,10 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
 
+-   repo: https://github.com/PyCQA/isort
+    rev: 5.10.1
+    hooks:
+    - id: isort
 
 -   repo: https://github.com/psf/black
     rev: 22.6.0
