--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,12 @@ jobs:
       - name: Install root project, if required
         run: poetry install --no-interaction
 
+      - name: Debug
+        run: |
+          pip list
+          source .venv/bin/activate
+          pip list
+
       - name: Code quality checks
         run: |
           source .venv/bin/activate
@@ -44,6 +50,7 @@ jobs:
           black --check .
           flake8 --ignore D203 --exclude .venv,.git,__pycache__,docs/source/conf.py,old,build,dist --max-complexity 10
           mypy src/*
+          mypy tests/*
       - name: Test with pytest
         run: |
           source .venv/bin/activate
