--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ flake8 = "^5.0.4"
 pre-commit = "^2.20.0"
 mypy = "^0.971"
 
+[tool.isort]
+profile = "black"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
