--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,7 @@ jobs:
           flake8 --ignore D203 --exclude .venv,.git,__pycache__,docs/source/conf.py,old,build,dist --max-complexity 10
           mypy src/*
           mypy tests/*
-
-#       TODO: Run test engine here.
-     - name: Test with pytest
-       run: |
-         source $VENV
-         python src/test_engine.py
+      - name: Test with pytest
+        run: |
+          source $VENV
+          python -m pytest
