--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,15 @@ jobs:
           flake8 --ignore D203 --exclude .venv,.git,__pycache__,docs/source/conf.py,old,build,dist --max-complexity 10
           mypy src/*
           mypy tests/*
+      
       - name: Test with pytest
         run: |
           source $VENV
           python -m pytest
+      
+      - name: Run tests and collect coverage
+        run: pytest --cov src
+      
+      - name: Upload coverage to Codecov
+        uses: |
+          codecov/codecov-action@v3
