more changes for coverage
more changes for coverage

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,9 @@ jobs:
           python -m pytest
       
       - name: Run tests and collect coverage
-        run: pytest --cov src
+        run: |
+        pip install pytest-cov
+        pytest --cov src
       
       - name: Upload coverage to Codecov
         uses: |
