--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,6 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: |
-          codecov/codecov-action@v3
+          curl -Os https://uploader.codecov.io/latest/linux/codecov
+          chmod +x codecov
+          ./codecov -t ${CODECOV_TOKEN}
