Workflow documentation added.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,8 @@ jobs:
           curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
           ./codecov -t ${CODECOV_TOKEN}
+
+      - name: Generate Documentation
+        run: |
+          cd docs/
+          make html
