--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,5 +53,6 @@ jobs:
 
       - name: Generate Documentation
         run: |
+          apt-get install python3-sphinx
           cd docs/
           make html
