--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,5 +54,6 @@ jobs:
       - name: Generate Documentation
         run: |
           sudo apt-get install python3-sphinx
+          pip install sphinx_rtd_them
           cd docs/
           make html
